# rustlang-agent-template

./: .env.example  Cargo.toml  GEMINI.md  README.md
src/: envs.rs  main.rs  state.rs
src/agents/: mod.rs
src/agents/orchestrator/: mod.rs  system_prompt.md
src/agents/specialized/: mod.rs
src/agents/specialized/address/: mod.rs  system_prompt.md
src/agents/specialized/damage/: mod.rs  system_prompt.md
src/agents/specialized/dummy/: mod.rs  system_prompt.md
src/agents/tools/: cost_database.rs  geocoding.rs  mod.rs  text_reverser.rs
src/api/: handlers.rs  request.rs  routes.rs
src/infra/: errors.rs  mod.rs  redis.rs  telemetry.rs
