[package]
name = "service"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 3
strip = true
codegen-units = 1

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rig-core = { version = "0.24.0", features = ["derive"] }
anyhow = "1.0"
schemars = "1"
tower = "0"
tower-http = { version = "0", features = [
    "trace",
    "cors",
    "timeout",
    "limit",
    "compression-gzip",
] }
thiserror = "2"
tracing = "0.1"
tracing-stackdriver = { version = "0.10.0", features = ["opentelemetry"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.32.0"
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-gcloud-trace = "0.22.0"
opentelemetry-semantic-conventions = "0.31.0"
redis = { version = "0.32.7", features = ["tokio-comp"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
dotenv = "0.15.0"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
